--- a/.github/workflows/main_primomaps-geoserver.yml
+++ b/.github/workflows/main_primomaps-geoserver.yml
@@ -20,6 +20,8 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '11'
+      - name: Change to src directory
+        run: cd src/ 
 
       - name: Build with Maven
         run: mvn clean install
