--- a/.github/workflows/main_primomaps-geoserver.yml
+++ b/.github/workflows/main_primomaps-geoserver.yml
@@ -22,8 +22,8 @@ jobs:
           java-version: '17'
     
       - name: Build with Maven
-        working-directory: ./src
-        run: mvn package --file src/pom.xml
+#        working-directory: ./src
+        run: mvn package --file ./src/pom.xml
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
