--- a/src/pom.xml
+++ b/src/pom.xml
@@ -1744,6 +1744,7 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+                   <skipTests>true</skipTests>
           <runOrder>alphabetical</runOrder>
           <source>11</source>
           <target>11</target>
