--- a/.github/workflows/main_primomaps-geoserver.yml
+++ b/.github/workflows/main_primomaps-geoserver.yml
@@ -22,13 +22,13 @@ jobs:
           java-version: '17'
     
       - name: Build with Maven
-        working-directory: ./src
-        run: mvn clean install
+        #working-directory: ./src
+        run: mvn clean install --file pom.xml
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
-          name: java-app
+          name: primomaps-geoserver
           path: '${{ github.workspace }}/target/*.war'
 
   deploy:
@@ -42,13 +42,13 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v2
         with:
-          name: java-app
+          name: primomaps-geoserver
         #working-directory: ./src
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'primomaps-geoserver'
+          app-name: primomaps-geoserver
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BC4AD0E2914B4F5790C019E1604A5CD7 }}
-          package: '*.jar'
+          package: '*.war'
