--- a/.github/workflows/main_primomaps-geoserver.yml
+++ b/.github/workflows/main_primomaps-geoserver.yml
@@ -23,7 +23,7 @@ jobs:
     
       - name: Build with Maven
         #working-directory: ./src
-        run: mvn clean install --file pom.xml
+        run: mvn clean install --file ./src/pom.xml
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
