--- a/.github/workflows/main_primomaps-geoserver.yml
+++ b/.github/workflows/main_primomaps-geoserver.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: primomaps-geoserver
-          path: '${{ github.workspace }}/target/*.war'
+          path: '${{ github.workspace }}/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
@@ -51,4 +51,4 @@ jobs:
           app-name: primomaps-geoserver
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BC4AD0E2914B4F5790C019E1604A5CD7 }}
-          package: '*.war'
+          package: '*.jar'
